<?xml version="1.0"?>

<package format="2">
  <name>scenario_expression</name>
  <version>0.0.0</version>
  <description>The scenario_expression package</description>

  <maintainer email="httperror@404-notfound.jp">Tatsuya Yamasaki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>scenario_api</depend>
  <depend>scenario_conditions</depend>
  <depend>scenario_entities</depend>
  <depend>scenario_intersection</depend>
  <depend>scenario_utility</depend>
  <depend>yaml-cpp</depend>
</package>
