<?xml version="1.0"?>

<package format="3">
  <name>scenario_runner</name>
  <version>0.0.0</version>
  <description>The scenario_runner package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>
  <maintainer email="httperror@404-notfound.jp">Yamasaki Tatsuya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>entity_plugins</depend>
  <depend>libgoogle-glog-dev</depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-termcolor</exec_depend>  <!-- TODO MOVE THIS DEPENDENCY TO autoware.proj/ansible/roles or SCENARIO LAUNCHER -->
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-termcolor</exec_depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>scenario_api</depend>
  <depend>scenario_entities</depend>
  <depend>scenario_expression</depend>
  <depend>scenario_intersection</depend>
  <depend>scenario_logger</depend>
  <depend>scenario_logger_msgs</depend>
  <depend>scenario_runner_msgs</depend>
  <depend>scenario_sequence</depend>
  <depend>yaml-cpp</depend>
</package>
