<?xml version="1.0"?>

<package format="2">
  <name>action_plugins</name>
  <version>0.0.0</version>
  <description>The action_plugins package</description>

  <maintainer email="masaya-autoware@todo.todo">masaya-autoware</maintainer>
  <maintainer email="httperror@404-notfound.jp">Tatsuya Yamasaki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>scenario_actions</depend>
  <depend>scenario_intersection</depend>
  <depend>scenario_logger</depend>
  <depend>scenario_utility</depend>

  <export>
    <scenario_actions plugin="${prefix}/plugins.xml" />
  </export>
</package>
