<?xml version="1.0"?>

<package format="2">
  <name>scenario_actions</name>
  <version>0.0.0</version>
  <description>The scenario_actions package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>
  <maintainer email="httperror@404-notfound.jp">Tatsuya Yamasaki</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>scenario_api</depend>
  <depend>scenario_intersection</depend>
  <depend>scenario_utility</depend>
  <depend>yaml-cpp</depend>
</package>
