<?xml version="1.0" ?>

<package format="2">
  <name>scenario_api_autoware</name>
  <version>0.0.0</version>
  <description>The scenario_api_autoware package</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_system_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>dummy_perception_publisher</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_extension</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>scenario_api_utils</depend>
  <depend>scenario_logger</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
</package>
