<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scenario_api_autoware</name>
  <version>0.0.0</version>
  <description>The scenario_api_autoware ROS2 package</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_debug_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_system_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_extension</depend>
  <depend>rclcpp</depend>
  <depend>scenario_api_utils</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>vehicle_info_util</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
